- issue #44 : Display buildtime averages of different timeframes in the same chart
- replace print statements by logging methods
- issue #34 : Parse Travis CI logfile to retrieve timing info
- issue #24 : Assign Travis CI started and finished timestamps to build job
- method keenio.keen_io_writable() renamed to keenio.keen_is_writable()
- method keenio.keen_io_readable() renamed to keenio.keen_is_readable()
- issue #55 : get_logger() returns buildtimetrend logger object
- issue #15 : use Keen.io dashboard template for trends dashboard
- issue #58 : split project in a client (current project), library
(https://github.com/buildtimetrend/python-lib) and dashboard
(https://github.com/buildtimetrend/dashboard)
- issue #56 : set projectname with a parameter when using generate_trend.py
- change license to GNU Affero General Public License v3 or later (AGPLv3+)
- remove analyse.sh, directly use analyse.py instead
- rename 'trends' folder to 'dashboard'
- rename environment variable BUILD_TREND_TRENDS_DIR to BUILD_TREND_DASHBOARD_DIR
- issue #33 : Add nanoseconds when logging a timestamp
- issue #17 : add parameterized (repo name, interval) build status badge to dashboard
- issue #18 : link to project website and project repo on dashboard

v0.1.2 (released on 6Aug2014)
- improve Travis CI example : pull released version from git

v0.1.1 (released on 5Aug2014)
- improve Travis CI example : fix issue extracting the github tarball

v0.1 (released on 4Aug2014)
- Get timing data from each stage in a build process
- Store, analyse and create trends of the build process data
  - keen mode : send timing data to Keen.io and use the Keen.io API for analysis and visualisation
  - native mode : store data in xml format and use matplotlib to generate a chart (limited)
- Current charts and trends
  - number of builds, succesful and failed
  - average build duration
  - chart with build stage durations
  - builds per branch
  - different time period can be selected